--- a/JobSearch/Components/Layout/NavMenu.razor
+++ b/JobSearch/Components/Layout/NavMenu.razor
@@ -6,6 +6,7 @@
 @inject NavigationManager NavigationManager
 @inject SignInManager<ApplicationUser> SignInManager
 
+<div class="nav-illustration"></div>
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="">JobSearch</a>
