--- a/JobSearch/Components/Account/Pages/ForgotPasswordConfirmation.razor
+++ b/JobSearch/Components/Account/Pages/ForgotPasswordConfirmation.razor
@@ -2,7 +2,11 @@
 
 <PageTitle>Forgot password confirmation</PageTitle>
 
-<h1>Forgot password confirmation</h1>
-<p>
-    Please check your email to reset your password.
-</p>
+<div class="auth-container">
+    <div class="confirmation-card">
+        <h1>Zapomniałem hasła</h1>
+        <p>
+            Sprawdź skrzynkę e-mail aby zmienić hasło.
+        </p>
+    </div>
+</div>
