Update / Do dokończenia jest : Gdy wejdziemy w aplikowanie na ofertę zamienić nazwy z sanepid, orzeczenie na: a) Wymagane doświadczenie b) Rekrutacja online c) Książeczka sanepid. d) Status studenta e) Orzeczenie o niepełnosp - Zmienić nazwy z angielskiego (tryb pracy np. onsite - stacjonarne) - Zmienić nazwy branży z listy (nie ma spacji np. ZdrowieIUroda)

--- a/JobSearch/Components/Pages/JobOfferPages/Edit.razor
+++ b/JobSearch/Components/Pages/JobOfferPages/Edit.razor
@@ -203,19 +203,19 @@
 
                     <div class="options-container">
                         <label class="custom-check @(JobOffer.RequiresExperience ? "active" : "")">
-                            <input type="checkbox" @bind="JobOffer.RequiresExperience" /> Doświadczenie
+                            <input type="checkbox" @bind="JobOffer.RequiresExperience" /> Wymagane Doświadczenie
                         </label>
                         <label class="custom-check @(JobOffer.IsOnlineRecruitment ? "active" : "")">
                             <input type="checkbox" @bind="JobOffer.IsOnlineRecruitment" /> Rekrutacja Online
                         </label>
                         <label class="custom-check @(JobOffer.RequiresSanitaryBook ? "active" : "")">
-                            <input type="checkbox" @bind="JobOffer.RequiresSanitaryBook" /> Sanepid
+                            <input type="checkbox" @bind="JobOffer.RequiresSanitaryBook" /> Książeczka Sanepidowska
                         </label>
                         <label class="custom-check @(JobOffer.RequiresStudentStatus ? "active" : "")">
-                            <input type="checkbox" @bind="JobOffer.RequiresStudentStatus" /> Student
+                            <input type="checkbox" @bind="JobOffer.RequiresStudentStatus" /> Status Studenta
                         </label>
                         <label class="custom-check @(JobOffer.RequiresDisabilityCertificate ? "active" : "")">
-                            <input type="checkbox" @bind="JobOffer.RequiresDisabilityCertificate" /> Orzeczenie
+                            <input type="checkbox" @bind="JobOffer.RequiresDisabilityCertificate" /> Orzeczenie o niepełnosprawności
                         </label>
                     </div>
                 </div>
