--- a/JobSearch/Components/Pages/JobOfferPages/Create.razor
+++ b/JobSearch/Components/Pages/JobOfferPages/Create.razor
@@ -120,21 +120,24 @@
                     <select @bind="JobOffer.EmplType" class="form-control">
                         @foreach (var type in Enum.GetValues(typeof(EmploymentType)).Cast<EmploymentType>())
                         {
-                            <option value="@type">@type</option>
+                            <option value="@type">@EnumText.Display(type)</option>
                         }
                     </select>
                     <ValidationMessage For="() => JobOffer.EmplType" class="text-danger small" />
                 </div>
+
                 <div class="col-md-3">
                     <label class="form-label">Tryb</label>
                     <select @bind="JobOffer.JobType" class="form-control">
                         @foreach (var type in Enum.GetValues(typeof(JobType)).Cast<JobType>())
                         {
-                            <option value="@type">@type</option>
+                            <option value="@type">@EnumText.Display(type)</option>
                         }
                     </select>
                     <ValidationMessage For="() => JobOffer.JobType" class="text-danger small" />
                 </div>
+            
+
                 <div class="col-md-3">
                     <label class="form-label">Płaca (Min)</label>
                     <div class="input-group">
